<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/main_score"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/Player"
                    android:text="@string/stats" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/SetsGames"
                        android:text="" />

                    <TextView
                        style="@style/SetsGames"
                        android:text="@string/set_1" />

                    <TextView
                        style="@style/SetsGames"
                        android:text="@string/set_2"/>

                    <TextView
                        style="@style/SetsGames"
                        android:text="@string/set_3"/>

                    <TextView
                        style="@style/SetsGames"
                        android:text="@string/current"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/player_a_name"
                        style="@style/Stats_Score"
                        android:text="FED" />

                    <TextView
                        android:id="@+id/player_a_set1_games"
                        style="@style/Stats_Score"
                        android:text="@string/zero" />

                    <TextView
                        android:id="@+id/player_a_set2_games"
                        style="@style/Stats_Score"
                        android:text="@string/zero"/>

                    <TextView
                        android:id="@+id/player_a_set3_games"
                        style="@style/Stats_Score"
                        android:text="@string/zero"/>

                    <TextView
                        android:id="@+id/player_a_current"
                        style="@style/Current_Score"
                        android:text="@string/zero"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/player_b_name"
                        style="@style/Stats_Score"
                        android:text="NAD" />

                    <TextView
                        android:id="@+id/player_b_set1_games"
                        style="@style/Stats_Score"
                        android:text="@string/zero" />

                    <TextView
                        android:id="@+id/player_b_set2_games"
                        style="@style/Stats_Score"
                        android:text="@string/zero"/>

                    <TextView
                        android:id="@+id/player_b_set3_games"
                        style="@style/Stats_Score"
                        android:text="@string/zero"/>

                    <TextView
                        android:id="@+id/player_b_current"
                        style="@style/Current_Score"
                        android:text="@string/zero"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <!-- TO DO. Paint FED blue and its buttons blue.
                Paint NAD red and its buttons red-->

                <TextView
                    android:id="@+id/player_a_name_small"
                    style="@style/Player"
                    android:text="FED"/>

                <Button
                    style="@style/Button"
                    android:text="@string/ace"
                    android:onClick="scorePlayerOne"/>

                <Button
                    style="@style/Button"
                    android:text="@string/winner"
                    android:onClick="scorePlayerOne"/>

                <Button
                    style="@style/Button"
                    android:text="@string/unforced"
                    android:onClick="scorePlayerTwo"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="#616161" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/player_b_name_small"
                    style="@style/Player"
                    android:text="NAD"/>

                <Button
                    style="@style/Button"
                    android:text="@string/ace"
                    android:onClick="scorePlayerTwo"/>

                <Button
                    style="@style/Button"
                    android:text="@string/winner"
                    android:onClick="scorePlayerTwo"/>

                <Button
                    style="@style/Button"
                    android:text="@string/unforced"
                    android:onClick="scorePlayerOne"/>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp" >


        <Button
            android:id="@+id/button"
            style="@style/Reset_Button"
            android:text="@string/reset"
            android:onClick="resetScore"/>

    </RelativeLayout>
    <!-- -->


</RelativeLayout>